--- a/Boggle/Boggle.csproj
+++ b/Boggle/Boggle.csproj
@@ -52,9 +52,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoggleInteractor.cs" />
+    <Compile Include="ConnectPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConnectPrompt.Designer.cs">
+      <DependentUpon>ConnectPrompt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controller.cs" />
-    <Compile Include="IBoggle.cs" />
+    <Compile Include="IBoggleView.cs" />
+    <Compile Include="BoggleInteractor.cs" />
     <Compile Include="Boggle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,6 +71,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Boggle.resx">
       <DependentUpon>Boggle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConnectPrompt.resx">
+      <DependentUpon>ConnectPrompt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
